--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,7 +50,7 @@ nav ul li a {
 }
 
 /* Hero Section */
-.hero {
+.hello {
     text-align: center;
     margin-bottom: 40px;
     background-color: #fff; /* Make hero background white */
@@ -58,12 +58,12 @@ nav ul li a {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.hero img {
+.hello img {
     width: 100px;
     height: auto;
 }
 
-.hero-text h1 {
+.hello-text h1 {
     font-size: 2.5rem;
     color: #333;
 }
