--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
 
             <section class="features">
                 <div class="feature">
-                    <img src="/images/vehicles/dlorean.jpg.jpg" alt="Feature 1 - Car Interior">
+                    <img src="/images/vehicles/delorean.jpg" alt="Feature 1 - Car Interior">
                     <h2>Feature for this car</h2>
                     <p> You can Explore the luxurious interior of our cars, designed for comfort and style.</p>
                 </div>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="feature">
                     <img src="/images/vehicles/camaro.jpg" alt="Feature 3 - Safety Features">
-                    <h2>Feature this  car </h2>
+                    <h2>Feature for this  car </h2>
                     <p>Stay safe with our advanced safety features, ensuring peace of mind on the road.</p>
                 </div>
             </section>
