--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -220,6 +220,6 @@ footer.footer {
   }
 
   button {
-      padding: 8px 16px; /* Smaller button on mobile */
+      padding: 8px 16px; /* Smaller button on mobile now */
   }
 }
