--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,60 +7,57 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-      
-    
+    <header>
         <h1>Welcome to CSE Motors!</h1>
+    </header>
 
-        <div class="delorean">
-            <h2>DMC Delorean</h2>
-            <ul>
-                <li>3 Cup holders</li>
-                <li>Superman doors</li>
-                <li>Fuzzy dice!</li>
-                <button>Own Today</button>
-            </ul>
-            
-            <img src="images/vehicles/delorean-tn.jpg" alt="DMC Delorean">
-            
-        </div>
+    <div class="delorean">
+        <h2>DMC Delorean</h2>
+        <ul>
+            <li>3 Cup holders</li>
+            <li>Superman doors</li>
+            <li>Fuzzy dice!</li>
+        </ul>
+        <button>Own Today</button>
+        <img src="images/vehicles/delorean-tn.jpg" alt="DMC Delorean">
+    </div>
 
-        <div class="upgrades-and-reviews">
-            <div class="upgrades">
-                <h2>Delorean Upgrades</h2>
-                <div class="upgrades-row">
-                    <div class="upgrade-column">
-                        <div class="upgrade">
-                            <img src="images/upgrades/flux-cap.png" alt="Flux Capacitor">
-                            <p>Flux Capacitor</p>
-                        </div>
-                        <div class="upgrade">
-                            <img src="images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
-                            <p>Bumper Stickers</p>
-                        </div>
+    <div class="upgrades-and-reviews">
+        <div class="upgrades">
+            <h2>Delorean Upgrades</h2>
+            <div class="upgrades-row">
+                <div class="upgrade-column">
+                    <div class="upgrade">
+                        <img src="images/upgrades/flux-cap.png" alt="Flux Capacitor">
+                        <p>Flux Capacitor</p>
                     </div>
-                    <div class="upgrade-column">
-                        <div class="upgrade">
-                            <img src="images/upgrades/flame.jpg" alt="Flame Decals">
-                            <p>Flame Decals</p>
-                        </div>
-                        <div class="upgrade">
-                            <img src="images/upgrades/hub-cap.jpg" alt="Hub Caps">
-                            <p>Hub Caps</p>
-                        </div>
+                    <div class="upgrade">
+                        <img src="images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
+                        <p>Bumper Stickers</p>
+                    </div>
+                </div>
+                <div class="upgrade-column">
+                    <div class="upgrade">
+                        <img src="images/upgrades/flame.jpg" alt="Flame Decals">
+                        <p>Flame Decals</p>
+                    </div>
+                    <div class="upgrade">
+                        <img src="images/upgrades/hub-cap.jpg" alt="Hub Caps">
+                        <p>Hub Caps</p>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="reviews">
-                <h2>DMC Delorean Reviews</h2>
-                <ul>
-                    <li>"So fast it's almost like traveling in time." (4/5)</li>
-                    <li>"Coolest ride on the road." (4/5)</li>
-                    <li>"I'm feeling McFly!" (5/5)</li>
-                    <li>"The most futuristic ride of our day." (4.5/5)</li>
-                    <li>"80's livin and I love it!" (5/5)</li>
-                </ul>
-            </div>
+        <div class="reviews">
+            <h2>DMC Delorean Reviews</h2>
+            <ul>
+                <li>"So fast it's almost like traveling in time." (4/5)</li>
+                <li>"Coolest ride on the road." (4/5)</li>
+                <li>"I'm feeling McFly!" (5/5)</li>
+                <li>"The most futuristic ride of our day." (4.5/5)</li>
+                <li>"80's livin and I love it!" (5/5)</li>
+            </ul>
         </div>
     </div>
 
