--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -12,7 +12,7 @@
     </div>
     <!-- You can add humor to the error message if you like -->
     <div>
-        <p>Oops! Something went wrong... It's not you, it's us! 😅</p>
+        <p>Oops! Something went wrong... It's not you, it's us!</p>
     </div>
 </body>
 </html>
