--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Welcome to CSE Motors!</h1>
+        <%- messages() %>
     </header>
 
     <div class="delorean">
